# CineIA_GUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.CN.md  README.md  UPSTREAM_SYNC_PLAN.md  cineia.cpp  cineia.h  index.html  main.cpp  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
scripts/: build-cli-mac.sh
